style/objects/_modal.scss
.modal {
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  display: flex;
  justify-content: center;
  align-items: center;
  background-color: rgb(0 0 0);
  background-color: rgb(0 0 0 / 50%);

  &-content {
    padding: $s-lg;
    background-color: $dark;
    border: 1px solid $info;
    border-radius: $s-xs;
    color: white;
    min-width: 400px;
    display: flex;
    flex-direction: column;
    gap: $s-xlg;
    text-align: center;
  }
}

